--- a/pages/default/default.css
+++ b/pages/default/default.css
@@ -1,3 +1,12 @@
-h1 {
+h1, h2 {
 	font-family: 'Oswald', sans-serif;
+}
+h1 {
+	font-size: 80px;
+}
+h1 {
+	font-size: 40px;
+}
+#body {
+	text-align: center;
 }
